tests/paczka1/fuzzy1/29028097.err
Error in line 3: MKtEP S320 56,4
Error in line 5: 6ovrwJKR S525 33,0
Error in line 4: nsK S320 23,2
Error in line 18: MKtEP S288 14,9
Error in line 31: oNX4VWHuf S288 13,3
Error in line 28: nsK S288 86,9
